# Theorem_2_Multi_Party_SS_Algorithm

./: Cargo.toml
src/: main.rs  polynomials.rs
