[package]
name = "Theorem_2_Multi_Party_SS_Algorithm"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = "4.1.2"
rand = "0.9.0-alpha.1"
sha2 = "0.11.0-pre.3"
ark-poly = "0.4.2"
ark-ff = "0.4.2"
ark-test-curves = "0.4.2"
ark-std = "0.4.0"
ark-bn254 = "0.4.0"
merlin = "3.0.0"
rs_merkle = "1.4.1"
lambdaworks-crypto = "0.7.0"
lambdaworks-gpu = "0.7.0"
lambdaworks-math = "0.7.0"
winterfell = "0.9.0"
winter-math = "0.9.0"
winter-crypto = "0.9.0"
winter-fri = "0.9.0"